Structure change: separating client from server (part 2)